--- a/weave-components/package.json
+++ b/weave-components/package.json
@@ -6,8 +6,6 @@
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
     "@reduxjs/toolkit": "^2.3.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "echarts": "^5.5.1",
     "react": "^18.3.1",
@@ -42,7 +40,10 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.2",
+    "@testing-library/react": "^16.0.1",
     "autoprefixer": "^10.4.20",
+    "jest": "^27.5.1",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14"
   }
