--- a/weave-components/package.json
+++ b/weave-components/package.json
@@ -44,6 +44,7 @@
     "@testing-library/react": "^16.0.1",
     "autoprefixer": "^10.4.20",
     "jest": "^27.5.1",
+    "jest-canvas-mock": "^2.5.2",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14"
   }
