--- a/weave-components/package.json
+++ b/weave-components/package.json
@@ -40,6 +40,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/react": "^16.0.1",
     "autoprefixer": "^10.4.20",
